[gd_scene load_steps=22 format=2]

[ext_resource path="res://images/exit_button_normal.png" type="Texture" id=1]
[ext_resource path="res://images/settings_button_normal.png" type="Texture" id=2]
[ext_resource path="res://images/title.png" type="Texture" id=3]
[ext_resource path="res://images/play_button_normal.png" type="Texture" id=4]
[ext_resource path="res://images/settings_button_pressed.png" type="Texture" id=5]
[ext_resource path="res://images/play_button_pressed.png" type="Texture" id=6]
[ext_resource path="res://images/exit_button_pressed.png" type="Texture" id=7]
[ext_resource path="res://images/play_button_hover.png" type="Texture" id=8]
[ext_resource path="res://images/settings_button_hover..png" type="Texture" id=9]
[ext_resource path="res://images/exit_button_hover.png" type="Texture" id=10]
[ext_resource path="res://scripts/Main menu.gd" type="Script" id=11]
[ext_resource path="res://images/close_button_normal.png" type="Texture" id=12]
[ext_resource path="res://images/close_button_pressed.png" type="Texture" id=13]
[ext_resource path="res://images/iconset_sun_moon.png" type="Texture" id=14]
[ext_resource path="res://images/4by4.png" type="Texture" id=15]
[ext_resource path="res://images/icon_sets.png" type="Texture" id=16]
[ext_resource path="res://images/3by3_selection.png" type="Texture" id=17]
[ext_resource path="res://images/5by5.png" type="Texture" id=18]
[ext_resource path="res://images/difficulty.png" type="Texture" id=19]
[ext_resource path="res://images/iconset_xo-selection.png" type="Texture" id=20]

[sub_resource type="Animation" id=1]
resource_name = "Title pulsate"
length = 2.0
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("VBoxContainer/CenterContainer/title:rect_scale")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1, 2 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 1, 1 ), Vector2( 0.8, 0.8 ), Vector2( 1, 1 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("VBoxContainer/CenterContainer/title:rect_rotation")
tracks/1/interp = 2
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 0.0, 10.0 ]
}

[node name="Main menu" type="Control"]
pause_mode = 1
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 11 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Background color" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0.980392, 0.635294, 0.635294, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Main menu margin" type="MarginContainer" parent="Background color"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_constants/margin_right = 100
custom_constants/margin_top = 100
custom_constants/margin_left = 100
custom_constants/margin_bottom = 100
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="Background color/Main menu margin"]
margin_left = 100.0
margin_top = 100.0
margin_right = 924.0
margin_bottom = 500.0
custom_constants/separation = 40
alignment = 1

[node name="CenterContainer" type="CenterContainer" parent="Background color/Main menu margin/VBoxContainer"]
margin_top = 16.0
margin_right = 824.0
margin_bottom = 144.0

[node name="title" type="TextureRect" parent="Background color/Main menu margin/VBoxContainer/CenterContainer"]
margin_left = 162.0
margin_right = 662.0
margin_bottom = 128.0
rect_pivot_offset = Vector2( 250, 64 )
size_flags_horizontal = 0
texture = ExtResource( 3 )

[node name="Button_center" type="CenterContainer" parent="Background color/Main menu margin/VBoxContainer"]
margin_top = 184.0
margin_right = 824.0
margin_bottom = 384.0

[node name="VBoxContainer" type="VBoxContainer" parent="Background color/Main menu margin/VBoxContainer/Button_center"]
margin_left = 242.0
margin_right = 582.0
margin_bottom = 200.0
alignment = 1

[node name="Play" type="TextureButton" parent="Background color/Main menu margin/VBoxContainer/Button_center/VBoxContainer"]
margin_right = 340.0
margin_bottom = 64.0
texture_normal = ExtResource( 4 )
texture_pressed = ExtResource( 6 )
texture_hover = ExtResource( 8 )

[node name="Setting" type="TextureButton" parent="Background color/Main menu margin/VBoxContainer/Button_center/VBoxContainer"]
margin_top = 68.0
margin_right = 340.0
margin_bottom = 132.0
texture_normal = ExtResource( 2 )
texture_pressed = ExtResource( 5 )
texture_hover = ExtResource( 9 )

[node name="Exit" type="TextureButton" parent="Background color/Main menu margin/VBoxContainer/Button_center/VBoxContainer"]
margin_top = 136.0
margin_right = 340.0
margin_bottom = 200.0
texture_normal = ExtResource( 1 )
texture_pressed = ExtResource( 7 )
texture_hover = ExtResource( 10 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="Background color/Main menu margin"]
autoplay = "Title pulsate"
"anims/Title pulsate" = SubResource( 1 )

[node name="Settings" type="Control" parent="."]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MarginContainer" type="MarginContainer" parent="Settings"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_constants/margin_right = 200
custom_constants/margin_top = 50
custom_constants/margin_left = 200
custom_constants/margin_bottom = 50
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="Settings/MarginContainer"]
margin_left = 200.0
margin_top = 50.0
margin_right = 876.0
margin_bottom = 550.0
custom_constants/separation = 50

[node name="Close_settings" type="TextureButton" parent="Settings/MarginContainer/VBoxContainer"]
margin_right = 676.0
margin_bottom = 64.0
texture_normal = ExtResource( 12 )
texture_pressed = ExtResource( 13 )

[node name="Difficulty container" type="HBoxContainer" parent="Settings/MarginContainer/VBoxContainer"]
margin_top = 114.0
margin_right = 676.0
margin_bottom = 178.0

[node name="Difficulty" type="TextureRect" parent="Settings/MarginContainer/VBoxContainer/Difficulty container"]
margin_right = 280.0
margin_bottom = 64.0
texture = ExtResource( 19 )

[node name="3by3" type="TextureRect" parent="Settings/MarginContainer/VBoxContainer/Difficulty container"]
margin_left = 284.0
margin_right = 412.0
margin_bottom = 64.0
texture = ExtResource( 17 )

[node name="4by4" type="TextureRect" parent="Settings/MarginContainer/VBoxContainer/Difficulty container"]
margin_left = 416.0
margin_right = 544.0
margin_bottom = 64.0
texture = ExtResource( 15 )

[node name="5by5" type="TextureRect" parent="Settings/MarginContainer/VBoxContainer/Difficulty container"]
margin_left = 548.0
margin_right = 676.0
margin_bottom = 64.0
texture = ExtResource( 18 )

[node name="Iconsets container" type="HBoxContainer" parent="Settings/MarginContainer/VBoxContainer"]
margin_top = 228.0
margin_right = 676.0
margin_bottom = 292.0
custom_constants/separation = 50

[node name="Iconsets" type="TextureRect" parent="Settings/MarginContainer/VBoxContainer/Iconsets container"]
margin_right = 280.0
margin_bottom = 64.0
texture = ExtResource( 16 )

[node name="XO" type="TextureRect" parent="Settings/MarginContainer/VBoxContainer/Iconsets container"]
margin_left = 330.0
margin_right = 394.0
margin_bottom = 64.0
texture = ExtResource( 20 )

[node name="Sun moon" type="TextureRect" parent="Settings/MarginContainer/VBoxContainer/Iconsets container"]
margin_left = 444.0
margin_right = 508.0
margin_bottom = 64.0
texture = ExtResource( 14 )
[connection signal="pressed" from="Background color/Main menu margin/VBoxContainer/Button_center/VBoxContainer/Play" to="." method="_on_Play_pressed"]
[connection signal="pressed" from="Background color/Main menu margin/VBoxContainer/Button_center/VBoxContainer/Setting" to="." method="_on_Setting_pressed"]
[connection signal="pressed" from="Background color/Main menu margin/VBoxContainer/Button_center/VBoxContainer/Exit" to="." method="_on_Exit_pressed"]
[connection signal="pressed" from="Settings/MarginContainer/VBoxContainer/Close_settings" to="." method="_on_Close_settings_pressed"]
[connection signal="gui_input" from="Settings/MarginContainer/VBoxContainer/Difficulty container/3by3" to="." method="_on_3by3_gui_input"]
[connection signal="gui_input" from="Settings/MarginContainer/VBoxContainer/Difficulty container/4by4" to="." method="_on_4by4_gui_input"]
[connection signal="gui_input" from="Settings/MarginContainer/VBoxContainer/Difficulty container/5by5" to="." method="_on_5by5_gui_input"]
[connection signal="gui_input" from="Settings/MarginContainer/VBoxContainer/Iconsets container/XO" to="." method="_on_XO_gui_input"]
[connection signal="gui_input" from="Settings/MarginContainer/VBoxContainer/Iconsets container/Sun moon" to="." method="_on_Sun_moon_gui_input"]
